# mcp-tts-server

./: .env.example  .gitignore  CLAUDE_INTEGRATION.md  GOOGLE_CLOUD_SETUP.md  README.md  TIMER_USAGE_GUIDE.md  mcp_tts_server.py  package.json  pyproject.toml  requirements.txt  test_resources.py  test_speak.py  test_timers.py  validate_timers.py
